awsa/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: awsa
  labels:
    app: awsa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: awsa
  template:
    metadata:
      labels:
        app: awsa
    spec:
      containers:
      - name: awsa
        image: kind-game:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 443
        readinessProbe:
          httpGet: {path: /api/state, port: 443}
        livenessProbe:
          httpGet: {path: /api/state, port: 443}
