awsa/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: awsa
  labels:
    app: awsa
spec:
  selector:
    app: awsa
  ports:
  - port: 443
    targetPort: 443
  type: ClusterIP
