awsa/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: awsa
spec:
  podSelector:
    matchLabels:
      app: awsa
  policyTypes:
    - Ingress
    - Egress
